<resources>
    <string name="app_name">ClimAlert</string>
    <string name="title_home">Inicio</string>
    <string name="title_call">S.O.S.</string>
    <string name="title_info">Consejos</string>
    <string name="title_settings">Ajustes</string>
    <string name="title_dashboard">Panel de control</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="text_calor_extremo">Calor extremo</string>
    <string name="text_granizo">Granizo</string>
    <string name="text_tormenta_invernal">Tormenta invernal</string>
    <string name="text_tornado">Tornado</string>
    <string name="text_inundacion">Inundación</string>
    <string name="text_incendio_forestal">Incendio forestal</string>
    <string name="text_terremoto">Terremoto</string>
    <string name="text_tsunami">Tsunami</string>
    <string name="text_avalancha">Avalancha</string>
    <string name="text_lluvia_acida">Lluvia ácida</string>
    <string name="text_erupcion_volcanica">Erupción volcánica</string>
    <string name="text_gota_fria">Gota fría</string>
    <string name="text_tormenta_electrica">Tormenta eléctrica</string>
    <string name="hintobjeto"><i>Busca "nutria" o "Test"</i></string>
    <string name="map_ubicacion_usuario">Ubicación del usuario</string>
    <string name="map_ubicacion_actual">UBICACIÓN ACTUAL</string>
    <string name="map_refugio">Refugio</string>
    <string name="map_objeto">Objeto</string>
    <string name="map_editar_ubicaciones">Editar ubicaciones</string>
    <string name="map_borrar_ubicaciones">Borrar ubicaciones</string>
    <string name="map_ubicacion_1">Ubicación 1</string>
    <string name="map_ubicacion_2">Ubicación 2</string>
    <string name="map_button_si">Sí</string>
    <string name="map_button_no">No</string>
    <string name="map_msg_activa_gps">El sistema GPS está desactivado. ¿Desea activarlo?</string>
    <string name="sos_aviso_incidencia">Aviso de incidencia</string>
    <string name="sos_hint_descripcion">Descripción</string>
    <string name="sos_boton_enviar">Enviar</string>
    <string name="incidencia_etiqueta_fuente">Fuente: </string>
    <string name="incidencia_etiqueta_fecha">Fecha: </string>
    <string name="incidencia_fecha_no_disponible">Fecha no disponible</string>
    <string name="incidencia_boton_info_fenomeno">Sobre el fenómeno</string>
    <string name="incidencia_boton_foro">Foro</string>
    <string name="unidad_calor_extremo">ºC de temperatura</string>
    <string name="unidad_granizo">mm</string>
    <string name="unidad_tormenta_invernal">mm</string>
    <string name="unidad_tornado">km/h</string>
    <string name="unidad_inundacion">mm</string>
    <string name="unidad_incendio_forestal">Kelvin de brillo</string>
    <string name="unidad_terremoto">de magnitud</string>
    <string name="unidad_tsunami">mm</string>
    <string name="unidad_avalancha">mm</string>
    <string name="unidad_lluvia_acida">mm</string>
    <string name="unidad_erupcion_volcanica">Kelvin de brillo</string>
    <string name="unidad_gota_fria">mm</string>
    <string name="unidad_tormenta_electrica">Kelvin de brillo</string>
    <string name="incidencia_desc_calor_extremo">Altas temperaturas que pueden causar deshidratación y desmayos, sobretodo en gente mayor.</string>
    <string name="incidencia_desc_granizo">Precipitación sólida que se compone de bolas o grumos irregulares de hielo, cada uno de los cuales se refiere como una piedra de granizo.</string>
    <string name="incidencia_desc_tormenta_invernal">Eventos dominados por precipitación formada a bajas temperaturas como nieve o lluvia congelada. Pueden durar varios días y estar acompañadas de fuertes vientos y temperaturas extremadamente frías.</string>
    <string name="incidencia_desc_tornado">Columna de aire con alta velocidad angular cuyo extremo está tocando la Tierra. Se trata del fenómeno atmosférico ciclónico de mayor densidad energética de la Tierra.</string>
    <string name="incidencia_desc_inundacion">Ocupación por parte del agua de zonas que habitualmente están libres de ésta, por desbordamiento de ríos, torrentes o ramblas, o por lluvias torrenciales, deshielo, maremotos o huracanes, entre otros.</string>
    <string name="incidencia_desc_incendio_forestal">Ocurrencia de fuego no controlada que puede afectar o abrasar algo que no está destinado a quemarse. Puede afectar a estructuras y a seres vivos.</string>
    <string name="incidencia_desc_terremoto">Sacudida brusca y pasajera de la corteza terrestre producida por la liberación de energía acumulada en forma de ondas sísmicas. Los más comunes se producen por la actividad de fallas geológicas.</string>
    <string name="incidencia_desc_tsunami">Evento producido cuando se desplaza una gran masa de agua por algún fenómeno extraordinario, como un terremoto, erupción volcánica, desprendimientos de hielo glaciar, impacto de meteoritos, etc.</string>
    <string name="incidencia_desc_avalancha">Desplazamiento de una capa de nieve en una zona en pendiente que se dirige ladera abajo con velocidad variable. Se puede incorporar parte del sustrato y de la cobertura vegetal de la pendiente.</string>
    <string name="incidencia_desc_lluvia_acida">Lluvia formada cuando la humedad del aire se combina con óxidos de nitrógeno, dióxido de azufre o trióxido de azufre emitidos por la consumición de petróleo que contenga azufre.</string>
    <string name="incidencia_desc_erupcion_volcanica">Fenómeno geológico caracterizado por la emisión violenta en la superficie terrestre, por un volcán, de lavas y/o tefras acompañadas de gases volcánicos.</string>
    <string name="incidencia_desc_gota_fria">Evento de lluvia de alto impacto durante el otoño a lo largo del Mediterráneo occidental y puede ser análogo al Episodio Cevenol francés o Episodio Mediterráneo.</string>
    <string name="incidencia_desc_tormenta_electrica">Fenómeno meteorológico asociado al desarrollo vertical de nubosidad acompañado de descargas eléctricas o rayos y, habitualmente, precipitación y rachas de viento intensas en superficie.</string>
    <string name="consejos_desc_calor_extremo">El calor extremo se define como temperaturas de verano mucho más altas o condiciones mucho más húmedas de las promedio. Este calor extremo puede provocar insolación, que es una enfermedad que se caracteriza por náuseas, vómitos, cefalea, calor de la piel, sopor, somnolencia, y alteración de las fibras musculares expuestas a sus efectos. Esto es causado por el hecho de que el cuerpo no tiene capacidad de enfriarse adecuadamente.\n
        <b>\nPrevención\n</b>
        <li>Identificar lugares en su comunidad a los que pueda ir a refrescarse, como bibliotecas o centros comerciales.\n</li>
        <li>Cubra las ventanas con cortinas o persianas.\n</li>
        <li>Aísle térmicamente las puertas y ventanas.\n</li>
        <b>\nQué hacer\n</b>
        <li>No dejar a personas o mascotas en un automóvil cerrado.\n</li>
        <li>Tomar duchas o baños fríos.\n</li>
        <li>Usar ropa suelta, liviana y de colores claros.\n</li>
        <li>Beber mucho líquido.\n</li>
        <li>Evitar realizar actividades de alta energía o trabajo al aire libre durante el mediodía.\n</li>
        <li>Si se está afuera, buscar sombra y usar sombrero lo suficientemente ancho como para proteger el rostro.\n</li>
        <b>\nSeñales de insolación\n</b>
        <li>Temperatura corporal extremadamente alta.\n</li>
        <li>Piel enrojecida, caliente y seca sin sudor.\n</li>
        <li>Pulso fuerte y rápido.\n</li>
        <li>Mareos, confusión o pérdidas del conocimiento.\n</li>
    </string>
    <string name="consejos_desc_granizo">El granizo es un tipo de precipitación sólida que se compone de bolas o grumos irregulares de hielo, cada uno de los cuales se refiere como una piedra de granizo. Está formado, principalmente de hielo de agua y su tamaño puede variar entre los 5 y 50 milímetros (0,19 y 1,968 pulgadas) de diámetro, e incluso superar esa medida.\n
        <b>\nPrevención\n</b>
        <li>En caso de tener mascotas, meterlas adentro.\n</li>
        <li>Proteger los vehículos.\n</li>
        <li>Proteger los artículos en el exterior.\n</li>
        <b>\nQué hacer\n</b>
        <li>Dirigirse adentro.\n</li>
        <li>Asegurar ventanas.\n</li>
        <li>Localizar una zona segura.\n</li>
    </string>
    <string name="consejos_desc_tormenta_invernal">Una tormenta invernal es la precipitación de nieve sobre la superficie terrestre que incluye además vientos intensos.\n
        <b>\nPrevención\n</b>
        <li>Preparar la casa para protegerla del frío con aislamiento, sellador y cinta aislante.\n</li>
        <li>Reunir suministros en caso de necesitar quedarse en casa durante varios días sin energía eléctrica.\n</li>
        <li>Tenga baterías adicionales para radios y linternas.\n</li>
        <b>\nQué hacer\n</b>
        <li>Evitar salir a la carretera.\n</li>
        <li>En caso de estar atrapado en su automóvil, permanecer adentro.\n</li>
        <li>Limitar el tiempo al aire libre. En caso de salir, usar varias capas de ropa cálida y estar atento a los signos de congelación e hipotermia.\n</li>
        <b>\nCongelación\n</b>
        La congelación causa pérdida de sensibilidad y color alrededor de la cara, los dedos de las manos y de los pies.\n
        <li>Señales: entumecimiento, piel blanca o grisácea-amarillenta, piel firme o cerosa.\n</li>
        <li>Medidas: Vaya a una habitación cálida. Sumerja su cuerpo en agua tibia. Use el calor corporal para calentarse. No se masajee ni use una almohadilla térmica.\n</li>
        <b>\nHipotermia\n</b>
        La hipotermia es una temperatura corporal inusualmente baja. Una temperatura menor de 35ºC se considera una emergencia.\n
        <li>Señales: escalofríos, agotamiento, confusión, torpeza en el movimiento de las manos, pérdida de memoria, dificultad para hablar o somnolencia.\n</li>
        <li>Medidas: Vaya a una habitación cálida. Caliente el centro de su cuerpo primero, o sea: pecho, cuello, cabeza e ingle. Manténgase seco y envuelto en mantas cálidas, incluyendo la cabeza y el cuello.\n</li>
    </string>
    <string name="consejos_desc_tornado">Los tornados son columnas de aire que giran violentamente y que se extienden desde una tormenta eléctrica hasta el suelo. Los tornados pueden destruir edificios, voltear autos y crear mortales escombros impulsados por los vientos.\n
        <b>\nPrevención\n</b>
        <li>Conocer los indicios de un tornado: una nube giratoria en forma de embudo; una nube de escombros que se aproxima; o un rugido fuerte, similar a un tren de carga.\n</li>
        <li>Identificar un refugio seguro.\n</li>
        <li>Prepararse para refugiarse en el lugar, reuniendo suministros de emergencia, artículos de limpieza, alimentos no perecederos, agua, suministros médicos y medicamentos.\n</li>
        <b>\nQué hacer\n</b>
        <li>Ir inmediatamente a un lugar seguro que se haya identificado.\n</li>
        <li>Mantenerse informado en sistemas de alerta para recibir información actualizada e instrucciones sobre la emergencia.\n</li>
        <li>Protegerse cubriendo la cabeza o cuellos con los brazos y poniendo materiales como muebles y mantas a su alrededor o encima.\n</li>
        <li>No tratar de escapar de un tornado en un vehículo si se está en un automóvil.\n</li>
    </string>
</resources>